--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,23 @@
-<div class="dashboard-container">
-  <div class="top-section">
-    <app-spark-lines></app-spark-lines>
-  </div>
-
-  <div class="bottom-sections">
-    <div class="bottom-left">
-      <app-dashed-line-chart></app-dashed-line-chart>
+<div class="dashboard-wrapper" [class.sidebar-closed]="!isSidebarOpen">
+  <app-sidebar [class.closed]="!isSidebarOpen"></app-sidebar>
+  <div class="dashboard-container">
+    <div class="top-section">
+      <button
+        (click)="globalService.toggleSidebar1()"
+        aria-label="Toggle Sidebar"
+      >
+        Toggle Sidebar
+      </button>
+      <app-spark-lines></app-spark-lines>
     </div>
-    <div class="bottom-right">
-      <app-tree-map-chart></app-tree-map-chart>
+
+    <div class="bottom-sections">
+      <div class="bottom-left">
+        <app-dashed-line-chart></app-dashed-line-chart>
+      </div>
+      <div class="bottom-right">
+        <app-tree-map-chart></app-tree-map-chart>
+      </div>
     </div>
   </div>
 </div>
