--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 0 1rem;
   background-color: #34495e;
 }
 
@@ -28,12 +28,16 @@
 }
 
 .logo-img {
-  width: 40px;
-  margin-right: 10px;
+  width: 80px;
+  margin-right: 5px;
 }
 
 .user-profile {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 1rem 0;
 }
 
@@ -66,10 +70,10 @@
   margin-right: 10px;
 }
 
-.sidebar:not(.open) ~ .main-content {
+/* .sidebar:not(.open) ~ .main-content {
   margin-left: 0;
   width: 100%;
-}
+} */
 
 @media (max-width: 768px) {
   .sidebar {
@@ -77,7 +81,6 @@
   }
 
   .main-content {
-    margin-left: 0;
     width: 100%;
   }
 }
