--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -6,8 +6,8 @@
 >
   <div class="sidebar-header">
     <div class="logo">
-      <img src="assets/logo.png" alt="Logo" class="logo-img" />
-      <span class="site-name">My Site</span>
+      <img src="logo1.png" alt="Logo" class="logo-img" />
+      <span class="site-name">Gymenzo</span>
     </div>
     <button
       class="close-btn"
