--- a/src/app/components/spark-lines/spark-lines.component.css
+++ b/src/app/components/spark-lines/spark-lines.component.css
@@ -1,11 +1,15 @@
 .row {
   overflow: hidden;
   max-width: 100%;
-  margin: 30px auto;
+  margin: 10px auto;
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
-  margin-bottom: 20px;
+  gap: 10px;
+  justify-content: space-between;
+}
+
+.mt-8 {
+  padding: 0 10px;
 }
 
 .col-md-4 {
