--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,6 +1,6 @@
 .sidebar {
   width: 250px;
-  background-color: #2c3e50;
+  background-color: black;
   color: white;
   height: 100%;
   position: fixed;
@@ -19,7 +19,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
-  background-color: #34495e;
+  background-color: black;
 }
 
 .logo {
@@ -63,7 +63,8 @@
 
 .sidebar-items li:hover,
 .sidebar-items li.active {
-  background-color: #1abc9c;
+  background-color: gold;
+  color: black;
 }
 
 .sidebar-items li i {
