--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
         >
           <img
             class="toggleIcon"
-            [src]="isSidebarOpen ? 'toggleLeft.svg' : 'toggleRight.svg'"
+            [src]="isSidebarOpen ? 'toggleRight.svg' : 'toggleLeft.svg'"
             alt="Sidebar Toggle"
           />
         </button>
