--- a/src/app/pages/users-page/users-page.component.html
+++ b/src/app/pages/users-page/users-page.component.html
@@ -1,11 +1,9 @@
-<p>users-page works!</p>
 <div class="container mx-auto p-4">
   <h2 class="text-2xl font-semibold mb-4">Users Management</h2>
 
   <!-- Add Button -->
   <button
     class="mb-4 px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
-    (click)="addUser()"
   >
     Add User
   </button>
@@ -16,9 +14,6 @@
   >
     <thead>
       <tr class="border-b">
-        <th class="px-6 py-3 text-left text-sm font-semibold text-gray-600">
-          ID
-        </th>
         <th class="px-6 py-3 text-left text-sm font-semibold text-gray-600">
           Name
         </th>
@@ -32,20 +27,13 @@
     </thead>
     <tbody>
       <tr *ngFor="let user of users; let i = index">
-        <td class="px-6 py-4 text-sm text-gray-800">{{ user.id }}</td>
         <td class="px-6 py-4 text-sm text-gray-800">{{ user.name }}</td>
         <td class="px-6 py-4 text-sm text-gray-800">{{ user.email }}</td>
         <td class="px-6 py-4 text-sm text-gray-800">
-          <button
-            class="text-blue-500 hover:text-blue-700 mr-2"
-            (click)="editUser(user.id)"
-          >
+          <button class="text-blue-500 hover:text-blue-700 mr-2">
             <i class="fas fa-edit"></i> Edit
           </button>
-          <button
-            class="text-red-500 hover:text-red-700"
-            (click)="deleteUser(user.id)"
-          >
+          <button class="text-red-500 hover:text-red-700">
             <i class="fas fa-trash"></i> Delete
           </button>
         </td>
