--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="user-profile">
-    <img [src]="user.image" alt="{{ user.name }}" class="user-img" />
+    <img [src]="image" alt="{{ user.name }}" class="user-img" />
     <p class="user-name">{{ user.name }}</p>
   </div>
 
