--- a/src/app/pages/users-page/users-page.component.html
+++ b/src/app/pages/users-page/users-page.component.html
@@ -2,11 +2,8 @@
   <h2 class="text-2xl font-semibold mb-4">Users Management</h2>
 
   <!-- Add Button -->
-  <button
-    class="mb-4 px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
-  >
-    Add User
-  </button>
+
+  <app-add-user [users]="users"></app-add-user>
 
   <!-- Table -->
   <table
@@ -21,6 +18,12 @@
           Email
         </th>
         <th class="px-6 py-3 text-left text-sm font-semibold text-gray-600">
+          Phone
+        </th>
+        <th class="px-6 py-3 text-left text-sm font-semibold text-gray-600">
+          role
+        </th>
+        <th class="px-6 py-3 text-left text-sm font-semibold text-gray-600">
           Actions
         </th>
       </tr>
@@ -29,14 +32,24 @@
       <tr *ngFor="let user of users; let i = index">
         <td class="px-6 py-4 text-sm text-gray-800">{{ user.name }}</td>
         <td class="px-6 py-4 text-sm text-gray-800">{{ user.email }}</td>
+        <td class="px-6 py-4 text-sm text-gray-800">{{ user.phone }}</td>
+        <td class="px-6 py-4 text-sm text-gray-800">{{ user.role }}</td>
         <td class="px-6 py-4 text-sm text-gray-800">
           <button class="text-blue-500 hover:text-blue-700 mr-2">
             <i class="fas fa-edit"></i> Edit
           </button>
-          <button class="text-red-500 hover:text-red-700">
+          <button
+            class="text-red-500 hover:text-red-700"
+            (click)="delete(user._id)"
+            (click)="onUserDeleted(user._id)"
+          >
             <i class="fas fa-trash"></i> Delete
           </button>
         </td>
+        <!-- <app-confirmation-model
+          [user]="user"
+          (userDeleted)="onUserDeleted($event)"
+        ></app-confirmation-model> -->
       </tr>
     </tbody>
   </table>
