--- a/src/app/pages/users-page/users-page.component.html
+++ b/src/app/pages/users-page/users-page.component.html
@@ -4,6 +4,12 @@
   <!-- Add Button -->
 
   <app-add-user [users]="users"></app-add-user>
+  <app-edit-user
+    [openEditModal]="openEditModal"
+    (closeModalEvent)="openEditModal = $event"
+    [selectUser]="selectUser"
+    (userUpdated)="onUserUpdated($event)"
+  ></app-edit-user>
 
   <!-- Table -->
   <table
@@ -35,7 +41,10 @@
         <td class="px-6 py-4 text-sm text-gray-800">{{ user.phone }}</td>
         <td class="px-6 py-4 text-sm text-gray-800">{{ user.role }}</td>
         <td class="px-6 py-4 text-sm text-gray-800">
-          <button class="text-blue-500 hover:text-blue-700 mr-2">
+          <button
+            (click)="selectedUser(user)"
+            class="text-blue-500 hover:text-blue-700 mr-2"
+          >
             <i class="fas fa-edit"></i> Edit
           </button>
           <button
